# cde

./: README.md  cde.plugin.zsh  cde.zsh  install.sh
bastion/: command.zsh
bw/: command.zsh
cache/: command.zsh
cde-rust/: Cargo.toml  cde-wrapper.sh
cde-rust/src/: db.rs  main.rs  profile.rs  protocol.rs  shell.rs
cde-rust/src/profile/: aws.rs  azure.rs  gcp.rs
cr/: command.zsh
docs/: README.md  bastion.md  cache.md  container-registry.md  profile-management.md  ssm-connections.md
k8x/: command.zsh
p/: command.zsh
p/providers/: aws.zsh  azure.zsh  gcp.zsh
s3/: command.zsh
ssm/: command.zsh
ssm/providers/: aws.zsh  azure.zsh  gcp.zsh
