[package]
name = "cde-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cde"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5"
aws-config = "1.5"
tokio = { version = "1.41", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
